[tool.poetry]
name = "openmldb-exporter"
version = "0.5.0"
description = "prometheus exporter for OpenMLDB"
authors = ["aceforeverd <teapot@aceforeverd.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
openmldb_exporter = "openmldb_exporter:main"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.13.0"
openmldb = { path = "../python/", develop = false }
Twisted = "^22.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
