[tool.poetry]
name = "openmldb-exporter"
version = "0.6.0"
description = "prometheus exporter for OpenMLDB"
authors = ["aceforeverd <teapot@aceforeverd.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://openmldb.ai"
repository = "https://github.com/4paradigm/OpenMLDB"
documentation = "https://openmldb.ai/docs/zh/main/maintain/monitoring.html"
keywords = ["openmldb", "prometheus"]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Topic :: System :: Monitoring",
  "Topic :: Database",
]

[tool.poetry.scripts]
openmldb-exporter = "openmldb_exporter.exporter:main"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.14.1"
openmldb = "^0.6.0"
# uncomment below to use openmldb sdk built from source
# set develop = true so changes in python will take effect immediately
# openmldb = { path = "../python/", develop = true }
Twisted = "^22.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
