[tool.poetry]
name = "openmldb-exporter"
version = "0.7.1"
description = "prometheus exporter for OpenMLDB"
authors = ["aceforeverd <teapot@aceforeverd.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://openmldb.ai"
repository = "https://github.com/4paradigm/OpenMLDB"
documentation = "https://openmldb.ai/docs/zh/main/maintain/monitoring.html"
keywords = ["openmldb", "prometheus"]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Topic :: System :: Monitoring",
  "Topic :: Database",
]

[tool.poetry.scripts]
openmldb-exporter = "openmldb_exporter.exporter:main"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.16.0"
openmldb = "^0.7.0"
# uncomment below to use openmldb sdk built from source
# set develop = true so changes in python will take effect immediately
# openmldb = { path = "../python/", develop = true }
Twisted = "^22.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
