#!/usr/bin/env python3
# -*- coding: utf-8 -*-
# Copyright 2021 4Paradigm
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = openmldb-autofe
version = 0.1
author = Huang Wei
long_description = file: README.md
license = Apache-2.0
url = https://github.com/4paradigm/OpenMLDB
# ref https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
# find dirs which have __init__.py
packages = find:
install_requires =
    requests
    automl-x==0.3.0
    scikit-learn>=0.19
    pandas
    pyyaml
    pyarrow
    tensorflow # inclue keras, automl-x won't install them

[options.entry_points]
console_scripts =
    openmldb_autofe = autofe.autofe:main
